Fixed Header Feature vertical alignment compatibility

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1311,9 +1311,18 @@ pre code {
 
 .table {
   width: 100%;
+  height: 100%;
   max-width: 100%;
   margin-bottom: 1rem;
   background-color: transparent;
+  display: table;
+}
+
+.table-cell {
+  display: table-cell;
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
 }
 
 .table th,
